--- a/backend/package.json
+++ b/backend/package.json
@@ -19,5 +19,10 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "groq-sdk": "^0.26.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
+  
 }
+
